--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                     </div>
 
                 </div>
+                                    <div class="d-flex justify-content-between align-items-center">
+                        <label class="switch">
+                            <input type="checkbox"  id="darkSwitch">
+                            <span class="slider round"></span>
+                          </label>
+                    </div>
 
             </div>
 
